service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellokube-service
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: hellokube
  ports:
  - name: hellokube-port
    protocol: TCP
    port: 80
    targetPort: 3000
